--- a/src/app/search.component.html
+++ b/src/app/search.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class='col-sm-3 buttons'>
                             <a [routerLink]="buttonRouterLink" [queryParams]="{'symbol': stockInput.value.toUpperCase(), 'from': 'search'}">
-                                <button type="submit" class="btn btn-primary" [disabled]="buttonDisabled" (click)="search(stockInput.value.toUpperCase())"><span class='glyphicon glyphicon-search'></span>Get Quote</button>
+                                <button type="submit" class="btn btn-primary" (click)="search(stockInput.value.toUpperCase())"><span class='glyphicon glyphicon-search'></span>Get Quote</button>
                             </a>
                             <a routerLink="/">
                                 <button type="button" class="btn btn-default" (click)="stockInput.value = ''; clearInput()"><span class='glyphicon glyphicon-refresh'></span>Clear</button>
